test/error/0009-unmatchedcppelif.c

/*
PATTERN: elif
*/

#elif 1

